nullaway_error_7EFA0A54-F0AD-471E-9287-A0021C8A64FB.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-jms/src/main/java/org/springframework/jms/listener/DefaultMessageListenerContainer.java:1453: error: [NullAway] passing @Nullable parameter 'this.session' where @NonNull is required
					this.consumer = createListenerConsumer(this.session);
					                                           ^
    (see http://t.uber.com/nullaway )
